[package]
name = "component_table"
description = "Data structure for associating data with entities in an Entity Component System"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/component-table.git"
repository = "https://github.com/stevebob/component-table.git"
documentation = "https://docs.rs/component_table"
edition = "2018"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
