[package]
name = "entity_table"
description = "Data structure for associating data with entities in an Entity Component System"
version = "0.2.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/entity-table.git"
repository = "https://github.com/stevebob/entity-table.git"
documentation = "https://docs.rs/entity_table"
edition = "2018"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
